--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <a class="navbar-toggler order-1 order-lg-0 ml-lg-0 ml-2" href="#"><span class="navbar-toggler-icon"></span></a>
         <div class="collapse navbar-collapse p-3 p-lg-0 mt-5 mt-lg-0 d-flex flex-column flex-lg-row flex-xl-row justify-content-lg-end mobileMenu" id="navbarSupportedContent">
           <ul class="navbar-nav align-self-stretch">
-            <li class="nav-item"><a class="nav-link nav-color" href="home.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link nav-color" href="index.html">Home</a></li>
             <li class="nav-item active"><a class="nav-link nav-color" href="about.html">about us</a></li>
             <li class="nav-item"><a class="nav-link nav-color" href="service.html">services</a></li>
             <li class="nav-item"><a class="nav-link nav-color" href="project.html">Portfolio</a></li>
