--- a/project.html
+++ b/project.html
@@ -19,7 +19,7 @@
 
         <div class="collapse navbar-collapse p-3 p-lg-0 mt-5 mt-lg-0 d-flex flex-column flex-lg-row flex-xl-row justify-content-lg-end mobileMenu" id="navbarSupportedContent">
           <ul class="navbar-nav align-self-stretch">
-            <li class="nav-item"><a class="nav-link nav-color" href="home.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link nav-color" href="index.html">Home</a></li>
             <li class="nav-item"><a class="nav-link nav-color" href="about.html">about us</a></li>
             <li class="nav-item"><a class="nav-link nav-color" href="service.html">services</a></li>
             <li class="nav-item active"><a class="nav-link nav-color" href="project.html">Portfolio</a></li>
