--- a/service.html
+++ b/service.html
@@ -162,11 +162,6 @@
 						<img class="home-services-cong" src="img/Icon21.png">
 						<img class="about-team-img123" src="img/imgabout4.png">
 					</div>
-
-
-
-
-
 					<h3>Jack Sparrow</h3>
 					<p>Business</p>
 				</div>
@@ -206,30 +201,28 @@
 				</div>
 			</div>
 		</div>
-
-
 	</div>
 	<div id="about-partner">
 		<div class="container">
 			<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s"
 				style="visibility: visible; animation-duration: 1s; animation-delay: 1s; animation-name: fadeIn;">
-				<img src="img/Icon1.png">
+				<img src="img/icon1.png">
 			</div>
 			<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s"
 				style="visibility: visible; animation-duration: 1s; animation-delay: 1s; animation-name: fadeIn;">
-				<img src="img/Icon2.png">
+				<img src="img/icon2.png">
 			</div>
 			<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s"
 				style="visibility: visible; animation-duration: 1s; animation-delay: 1s; animation-name: fadeIn;">
-				<img src="img/Icon3.png">
+				<img src="img/icon3.png">
 			</div>
 			<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s"
 				style="visibility: visible; animation-duration: 1s; animation-delay: 1s; animation-name: fadeIn;">
-				<img src="img/Icon4.png">
+				<img src="img/icon4.png">
 			</div>
 			<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="1s"
 				style="visibility: visible; animation-duration: 1s; animation-delay: 1s; animation-name: fadeIn;">
-				<img src="img/Icon5.png">
+				<img src="img/icon5.png">
 			</div>
 		</div>
 
